# aur-build-server

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile-dev  README.md  config.json.sample  config_server.json.sample  config_worker.json.sample  docker-compose.yaml  start.sh
arch-packages/aur-build-cli/: PKGBUILD
arch-packages/aur-build-server/: PKGBUILD
arch-packages/aur-build-worker/: PKGBUILD
config/: mirrorlist  pacman.conf
docker/: seccomp.json  start-server.sh  start-worker.sh
docs/: adding_repo_pacman.md  cli.md  docker.md  kubernetes.md  running_locally.md  server_api.md  server_configuration.md  webhooks.md  worker_configuration.md
kubernetes/: 01-namespace.yaml  02-config-configmap.yaml  03-pvc-serve.yaml  10-deployment-server.yaml  11-deployment-workers.yaml  20-service.yaml
src/: main.rs
src/app/: mod.rs
src/args/: mod.rs
src/cli/: Cargo.toml
src/cli/src/: api.rs  args.rs  commands.rs  main.rs  profile.rs  utils.rs
src/common/: Cargo.toml
src/common/src/: lib.rs
src/common/src/http/: mod.rs  payloads.rs  responses.rs
src/common/src/messages/: mod.rs
src/common/src/models/: mod.rs
src/config/: mod.rs
src/errors/: mod.rs  package_build_error.rs
src/http/: auth_middleware.rs  mod.rs  responses.rs  server.rs
src/package_manager/: mod.rs
src/pages/: repo_index.html
src/server/: Cargo.toml  diesel.toml
src/server/migrations/2025-03-20-152148_create_packages_table/: up.sql
src/server/migrations/2025-03-20-153246_create_package_patches_table/: down.sql  up.sql
src/server/src/: .env  main.rs  orchestrator.rs
src/server/src/http/: api_worker.rs  auth_middleware.rs  base.rs  methods.rs  mod.rs  models.rs  packages.rs  patches.rs  util.rs  webhooks.rs  websocket.rs  workers.rs
src/server/src/http/pages/: repo_index.html
src/server/src/models/: args.rs  config.rs  mod.rs  package.rs  package_state.rs  server_package.rs  worker.rs
src/server/src/orchestrator/: mod.rs  state.rs
src/server/src/persistence/: mod.rs  package_store.rs  schema.rs
src/server/src/repository/: manager.rs  mod.rs
src/server/src/utils/: repo.rs
src/server/src/webhooks/: mod.rs  payloads.rs
src/server/src/worker/: manager.rs  mod.rs  worker.rs  worker_manager.rs
src/server/tests/: aur-build-cli-0.10.0-1-any.pkg.tar.zst
src/utils/: aurweb.rs  file.rs  git.rs  graph.rs  log.rs  makepkg.rs  mod.rs  package.rs  package_data.rs  pacman.rs  pkgbuild.rs  tree.rs
src/worker/: Cargo.toml
src/worker/src/: handler.rs  logs.rs  main.rs  utils.rs  worker.rs
src/worker/src/builder/: bubblewrap.rs  dependency.rs  mod.rs  utils.rs
src/worker/src/commands/: git.rs  gpg.rs  makepkg.rs  mod.rs  pacman.rs
src/worker/src/errors/: mod.rs
src/worker/src/models/: config.rs  mod.rs  package_build_result.rs
src/worker/src/orchestrator/: http.rs  mod.rs  websocket.rs
