[package]
name = "aur-build-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
actix-service = "2.0.2"
actix-web-httpauth = "0.5.1"

tokio = { version = "1", features = ["full"] }
futures = "0.3.19"

git2 = "0.13.25"

serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"

relative-path = "1.6.0"
clap = { version = "3.0.7", features = ["derive"] }
