[package]
name = "aur-build-cli"
version = "0.20.0"
edition = "2021"

[[bin]]
name = "aur-build-cli"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }

reqwest = { version = "0.12.5", features = ["blocking", "json"] }

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"

clap = { version = "4.5.8", features = ["derive"] }

colored = "2.1.0"
dialoguer = "0.11.0"
cli-table = "=0.4.9"

simple-error = "0.3.0"
homedir = "0.3.3"
chrono = { version = "0.4.38", features = ["serde"] }
