[package]
name = "aur-build-cli"
version = "0.30.0"
edition = "2021"

[[bin]]
name = "aur-build-cli"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }

reqwest = { version = "0.12.15", features = ["blocking", "json"] }

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"

clap = { version = "4.5.38", features = ["derive"] }

colored = "3.0.0"
dialoguer = "0.11.0"
cli-table = "=0.5.0"

simple-error = "0.3.0"
homedir = "0.3.4"
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0.98"
