[package]
name = "aur-build-server"
version = "0.30.0"
edition = "2021"

[[bin]]
name = "aur-build-server"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }

clap = { version = "4.5.34", features = ["derive"] }

reqwest = { version = "0.12.15", features = ["blocking", "multipart", "json", "stream"] }


chrono = { version = "0.4.40", features = ["serde"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = "0.1.17"

futures = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["std", "sink"] }

log = { version = "0.4.27", features = ["serde"] }
simplelog = "0.12.2"

handlebars = "6.3.2"
anyhow = "1.0.97"
diesel = { version = "2.2.8", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "serde_json"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
actix-web = "4.10.2"
actix-multipart = "0.7.2"
actix-ws = "0.3.0"
tempfile = "3.19.1"
actix-files = "0.6.6"

[dev-dependencies]
serial_test = "3.1.1"
