[package]
name = "aur-build-server"
version = "0.20.1"
edition = "2021"

[[bin]]
name = "aur-build-server"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }

clap = { version = "4.5.4", features = ["derive"] }

warp = "0.3.7"
reqwest = { version = "0.12.4", features = ["blocking", "multipart", "json", "stream"] }

rand = "0.8.5"

chrono = { version = "0.4.39", features = ["serde"] }
regex = "1.11.1"

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

tokio = { version = "1.43.1", features = ["full"] }
tokio-stream = "0.1.17"

futures = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["std", "sink"] }

log = { version = "0.4.22", features = ["serde"] }
simplelog = "0.12.2"

bytes = "1.6.1"
handlebars = "6.2.0"
anyhow = "1.0.86"

[dev-dependencies]
serial_test = "3.1.1"
