[package]
name = "aur-build-server"
version = "0.30.0"
edition = "2021"

[[bin]]
name = "aur-build-server"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }


tokio = { version = "1.45.0", features = ["full"] }
futures-util = { version = "0.3.31", default-features = false, features = ["std", "sink"] }

clap = { version = "4.5.38", features = ["derive"] }
anyhow = "1.0.98"
reqwest = { version = "0.12.15", features = ["blocking", "multipart", "json", "stream"] }
chrono = { version = "0.4.41", features = ["serde"] }
tempfile = "3.20.0"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

log = { version = "0.4.27", features = ["serde"] }
simplelog = "0.12.2"

diesel = { version = "2.2.10", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "serde_json"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
actix-web = "4.11.0"
actix-multipart = "0.7.2"
actix-ws = "0.3.0"
actix-files = "0.6.6"

[dev-dependencies]
serial_test = "3.1.1"
