[package]
name = "aur-build-worker"
version = "0.20.0"
edition = "2021"

[[bin]]
name = "aur-build-worker"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }

warp = "0.3.7"
reqwest = { version = "0.12.5", features = ["multipart", "json", "stream"] }

chrono = { version = "0.4.38", features = ["serde"] }

serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

tokio = { version = "1.38.1", features = ["full"] }
tokio-stream = "0.1.15"
tokio-tungstenite = "0.23.1"

futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features = ["std", "sink"] }

git2 = "0.19.0"

relative-path = "1.9.3"
log = { version = "0.4.22", features = ["serde"] }
simplelog = "0.12.2"

srcinfo = "1.1.0"

async-recursion = "1.1.1"
sha2 = "0.10.8"
base16ct = { version = "0.2.0", features = ["alloc"] }

petgraph = "0.6.5"

[dev-dependencies]
serial_test = "3.1.1"

