[package]
name = "aur-build-worker"
version = "0.30.0"
edition = "2021"

[[bin]]
name = "aur-build-worker"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }

warp = "0.3.7"
reqwest = { version = "0.12.11", features = ["multipart", "json", "stream"] }

chrono = { version = "0.4.39", features = ["serde"] }

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.26.1"

futures = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["std", "sink"] }

git2 = "0.20.1"

relative-path = "1.9.3"
log = { version = "0.4.27", features = ["serde"] }
simplelog = "0.12.2"

srcinfo = "1.1.0"

async-recursion = "1.1.1"
sha2 = "0.10.8"
base16ct = { version = "0.2.0", features = ["alloc"] }

petgraph = "0.7.1"
os_pipe = "1.2.1"

[dev-dependencies]
serial_test = "3.2.0"

