[package]
name = "aur-build-worker"
version = "0.30.0"
edition = "2021"

[[bin]]
name = "aur-build-worker"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.26.2"
futures-util = { version = "0.3.31", default-features = false, features = ["std", "sink"] }

anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }

reqwest = { version = "0.12.15", features = ["multipart", "json", "stream"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

git2 = "0.20.2"

log = { version = "0.4.27", features = ["serde"] }
simplelog = "0.12.2"

srcinfo = "1.1.0"

async-recursion = "1.1.1"
sha2 = "0.10.9"
base16ct = { version = "0.2.0", features = ["alloc"] }

petgraph = "0.8.1"
os_pipe = "1.2.2"

[dev-dependencies]
serial_test = "3.2.0"

